k3s/generated_manifests/grafana/Ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.doma.lol
