k3s/generated_manifests/grafana/IngressRoute-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.doma.lol`)
      services:
        - name: grafana-web
          port: 80
